<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/tools" tools:paddingLeft="@dimen/activity_horizontal_margin" tools:paddingTop="@dimen/activity_vertical_margin" tools:paddingRight="@dimen/activity_horizontal_margin" tools:paddingBottom="@dimen/activity_vertical_margin" tools:layout_width="match_parent" tools:layout_height="match_parent" tools:context=".MainActivity">
    <TextView tools:id="@id/textView1" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:text="@string/hello_world" />
    <Button tools:id="@id/button1" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginTop="21dp" tools:text="@string/Engmode" tools:layout_below="@id/textView1" tools:layout_alignLeft="@id/textView1" tools:layout_alignRight="@id/textView2" />
    <Button tools:id="@id/button2" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginTop="17dp" tools:text="@string/DeveOpt" tools:layout_below="@id/button1" tools:layout_alignLeft="@id/button1" tools:layout_alignRight="@id/button1" />
    <Button tools:id="@id/button3" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginTop="18dp" tools:text="@string/Controler_Test" tools:layout_below="@id/button2" tools:layout_alignLeft="@id/button2" tools:layout_alignRight="@id/button2" />
    <TextView tools:id="@id/textView2" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginLeft="46dp" tools:text="@string/verString" tools:layout_toRightOf="@id/textView1" tools:layout_alignBottom="@id/textView1" />
    <Button tools:id="@id/button4" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginLeft="61dp" tools:text="@string/apps_manager" tools:layout_toRightOf="@id/button1" tools:layout_alignBottom="@id/button1" />
    <Button tools:id="@id/button5" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:text="@string/rootUnroot" tools:layout_above="@id/button3" tools:layout_alignLeft="@id/button4" />
    <Button tools:id="@id/button6" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginTop="18dp" tools:text="@string/LogSetings" tools:layout_below="@id/button2" tools:layout_alignLeft="@id/button4" />
    <Button tools:id="@id/button7" tools:layout_width="wrap_content" tools:layout_height="wrap_content" tools:layout_marginLeft="60dp" tools:text="@string/WifiEUT" tools:layout_toRightOf="@id/button4" tools:layout_alignBottom="@id/button1" />
</RelativeLayout>
